--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,9 @@ tqdm = "^4.67.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^9.0.2"
-detect = "^2020.12.3"
 pytest-cov = "^7.0.0"
+detect-secrets = "^1.5.0"
+pre-commit = "^4.5.1"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
